# valt

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
crates/valt-core/src/: generator.rs  manager.rs
packaging/aur/: PKGBUILD.tmpl
packaging/homebrew/: valt.rb.tmpl
src/: cli.rs  main.rs
src/core/: manager.rs
src/tui/: events.rs
src/tui/views/: detail.rs  form.rs  help.rs  list.rs  unlock.rs
