[package]
name = "valt"
version = "0.2.4"
edition = "2021"
description = "A keyboard-driven terminal password manager — encrypted, offline, no cloud"
license = "GPL-3.0-or-later"
repository = "https://github.com/jbgriesner/valt"

[[bin]]
name = "valt"
path = "src/main.rs"

[dependencies]
serdevault    = "0.2"
ratatui       = "0.29"
crossterm     = "0.28"
arboard       = "3"
clap          = { version = "4", features = ["derive"] }
rpassword     = "7"
serde         = { version = "1", features = ["derive"] }
uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
rand          = "0.8"
thiserror     = "1"
zeroize       = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "jbgriesner <https://github.com/jbgriesner>"
copyright = "2026 jbgriesner"
license-file = ["LICENSE", "0"]
extended-description = """\
Valt is a keyboard-driven terminal password manager. \
All secrets are stored in a single AES-256-GCM encrypted file on disk. \
No cloud, no network, no telemetry."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/valt", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/valt/README.md", "644"],
]
